fix api cancel delivery